--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,6 +36,7 @@ dependencies:
   get_it: 7.6.4
   go_router: 12.1.1
   golden_toolkit: 0.15.0
+  google_maps_flutter: 2.5.3
   intl: 0.18.1
   json_annotation: 4.8.1
   location: 5.0.3
