--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -34,6 +34,7 @@ dependencies:
   dio: 5.4.0
   flutter:
     sdk: flutter
+  flutter_dotenv: 5.1.0
   get_it: 7.6.4
   go_router: 12.1.1
   golden_toolkit: 0.15.0
@@ -67,7 +68,8 @@ flutter:
   uses-material-design: true
 
   # To add assets to your application, add an assets section, like this:
-  # assets:
+  assets:
+    - .env
   #   - images/a_dot_burr.jpeg
   #   - images/a_dot_ham.jpeg
 
